* Made driving smoother
* Made uphill fixed and smoother
* Added jump blocks (Set in config - default = 42)